outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-24_14-22-01/evaluations/problem_eval7235989969253670937_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance score that combines local distance, global connectivity, and adaptive penalty factors, using a hybrid cost function with non-linear scaling to prioritize nodes that balance proximity, centrality, and potential path efficiency while dynamically adjusting weights based on the current path state.}
                                                                                                                                                                                                                                                                                                                     ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance score that combines local distance, global connectivity, and adaptive penalty factors, using a hybrid cost function with non-linear scaling to prioritize nodes that balance proximity, centrality, and potential path efficiency while dynamically adjusting weights based on the current path state.}
                                                                                                                                                                                                                                                                                                                     ^
SyntaxError: unmatched '}'
